--- a/styles.css
+++ b/styles.css
@@ -58,18 +58,26 @@ h1 {
 
 .drum {
   outline: none;
-  border: 9px solid #0c0c0c;
   font-size: 5.5rem;
-  font-family: sans-serif, cursive;
+  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
   line-height: 2.0;
   font-weight: 800;
-  color: #73ff7a;
-  text-shadow: 4px 4px 9px #0c0c0c;
+  color: rgb(253, 216, 216);
   border-radius: 9px;
   display: inline-block;
   width: 150px;
   height: 150px;
   text-align: center;
-  margin: 10px;
-  background-color: white;
+  margin: .5rem;
+  text-shadow: -6px 6px 5px rgb(0, 0, 0);
+  box-shadow: 10px 10px 5px 2px rgba(0, 0, 0, .4);
+}
+
+@media screen and (max-width: 425px) {
+  #title {
+    font-size: 3.3rem;
+  }
+  .drum {
+    border: none;
+  }
 }
